@@ -1,2 +1,3 @@
 #!/bin/sh
-java -jar dest/ija-app.jar
+PATH_TO_FX=lib/javafx-sdk-11/lib
+java -jar --module-path $PATH_TO_FX --add-modules javafx.controls dest/ija-app.jar
